# sonic-dash-ha

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Cargo.toml  LICENSE  Makefile  README.md  azure-pipelines.yml  dummy_test_file.txt  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  semgrep.yml
.github/skills/build-dash-ha-container/: SKILL.md
.github/skills/build-test-dash-ha/: SKILL.md
.github/skills/deploy-dash-ha/: SKILL.md
.github/skills/sonic-mgmt-int-testing/: SKILL.md
.github/workflows/: coverage.yml
crates/actor/: Cargo.toml
crates/actor/src/: lib.rs
crates/container/: Cargo.toml
crates/container/src/: container.rs  main.rs
crates/hamgrd/: Cargo.toml
crates/hamgrd/src/: actors.rs  db_structs.rs  ha_actor_messages.rs  main.rs  runtime.rs
crates/hamgrd/src/actors/: dpu.rs  ha_scope.rs  ha_set.rs  test.rs  vdpu.rs
crates/hamgrd/src/actors/ha_scope/: base.rs  dpu.rs  mod.rs  npu.rs
crates/hamgrd/src/runtime/: resend_queue.rs
crates/sonic-common/: Cargo.toml
crates/sonic-common/src/: lib.rs  log.rs  panic.rs
crates/sonic-dash-api-proto/: Cargo.toml  build.rs
crates/sonic-dash-api-proto/src/: lib.rs
crates/sonicdb-derive/: Cargo.toml
crates/sonicdb-derive/src/: lib.rs
crates/sonicdb-derive/tests/: basic.rs
crates/sonicdb-macro/: Cargo.toml
crates/sonicdb-macro/src/: lib.rs
crates/sonicdb-macro/tests/: basic.rs
crates/sonicdb-serde/: Cargo.toml
crates/sonicdb-serde/src/: lib.rs
crates/swbus-actor/: Cargo.toml
crates/swbus-actor/src/: actor_message.rs  driver.rs  lib.rs  resend_queue.rs  runtime.rs  state.rs
crates/swbus-actor/src/state/: incoming.rs  internal.rs  outgoing.rs
crates/swbus-actor/tests/: count_to_1000.json  count_to_1000_internal_table.json  echo.json  echo.rs  kvstore.rs  test_executor.rs
crates/swbus-cli/: Cargo.toml  README.md
crates/swbus-cli-data/: Cargo.toml
crates/swbus-cli-data/src/: lib.rs
crates/swbus-cli-data/src/hamgr/: actor_state.rs  mod.rs
crates/swbus-cli/src/: main.rs  ping.rs  show.rs  trace_route.rs
crates/swbus-cli/src/show/: mod.rs
crates/swbus-cli/src/show/hamgrd/: actor.rs  mod.rs
crates/swbus-cli/src/show/swbusd/: mod.rs  route.rs
crates/swbus-config/: Cargo.toml
crates/swbus-config/src/: lib.rs
crates/swbus-contract/: Cargo.toml
crates/swbus-contract/proto/: swbus.proto
crates/swbus-contract/src/: swbus.rs
crates/swbus-contracts/: Cargo.toml  build.rs
crates/swbus-contracts/src/: lib.rs  swbus.rs
crates/swbus-core/: Cargo.toml  README.md  build.rs
crates/swbus-core/proto/: swbus.proto
crates/swbus-core/src/: conn.rs  conn_info.rs  conn_worker.rs  connection.rs  lib.rs  message_handler.rs  mux.rs  result.rs
crates/swbus-core/src/contracts/: swbus.rs
crates/swbus-core/src/mux/: conn.rs  conn_info.rs  conn_proxy.rs  conn_store.rs  conn_worker.rs  core_runtime.rs  message_handler.rs  mod.rs  multiplexer.rs  nexthop.rs  route_annoucer.rs  route_config.rs  service.rs  swbus_config.rs
crates/swbus-core/tests/: README.md  basic_tests.rs  dual_stack.rs  inter_cluster_tests.rs
crates/swbus-core/tests/common/: mod.rs  test_executor.rs
crates/swbus-core/tests/data/: test_ping.json  test_show_route.json  test_trace_route.json  topos.json
crates/swbus-core/tests/data/b2b/: test_ping.json  test_show_route.json  topo.json
crates/swbus-core/tests/data/dual-stack/: topo.json
crates/swbus-core/tests/data/inter-cluster/: test_ping.json  test_show_route.json  topo.json
crates/swbus-edge/: Cargo.toml
crates/swbus-edge/src/: core_client.rs  edge_runtime.rs  lib.rs  message_handler_proxy.rs  message_router.rs  message_types.rs  simple.rs  simple_client.rs
crates/swbus-edge/src/message_router/: route_map.rs
crates/swbus-proto/: Cargo.toml  build.rs
crates/swbus-proto/proto/: swbus.proto
crates/swbus-proto/src/: lib.rs  message_id_generator.rs  result.rs  swbus.rs  util.rs
crates/swbuscli/: Cargo.toml
crates/swbuscli/src/: main.rs  ping.rs  show.rs
crates/swbusd/: Cargo.toml
crates/swbusd/sample/: swbusd1.cfg  swbusd2.cfg
crates/swbusd/sample/inter-cluster/: swbusd_cluster-a.10.0.0.1.cfg  swbusd_cluster-a.10.0.0.2.cfg  swbusd_cluster-b.11.0.0.1.cfg
crates/swbusd/src/: config_reader.rs  main.rs  service.rs
crates/swss-common/: Cargo.toml  build.rs
crates/swss-common-bridge/: Cargo.toml
crates/swss-common-bridge/src/: consumer.rs  encoding.rs  lib.rs  payload.rs  producer.rs  table.rs  table_watcher.rs
crates/swss-common-testing/: Cargo.toml
crates/swss-common-testing/src/: lib.rs
crates/swss-common/src/: lib.rs  types.rs
crates/swss-common/src/types/: async_util.rs  class.rs  consumerstatetable.rs  cxxstring.rs  dbconnector.rs  logger.rs  pod.rs  producerstatetable.rs  subscriberstatetable.rs  table.rs  zmqclient.rs  zmqconsumerstatetable.rs  zmqproducerstatetable.rs  zmqserver.rs
crates/swss-common/tests/: async.rs  common.rs  dbconnector.rs  logger.rs  logger_fallback.rs  sync.rs
crates/swss-serde/: Cargo.toml
crates/swss-serde/src/: error.rs  field_value.rs  field_values.rs  lib.rs  table.rs  test.rs
debian/: .gitignore  changelog  control  install  rules
docs/: hamgrd-design-hld.md
scripts/: wait_for_loopback.py
test_utils/: README.md  run_redis.sh
test_utils/hamgrd/: database_config.json  database_global.json  redis_data_planned_up_then_down.cmd  redis_data_set.cmd  redis_data_set_full.cmd
