[workspace]
resolver = '2'
members = [
    "crates/sonic-common",
    "crates/swbus-core",
    "crates/swbusd",
    "crates/hamgrd",
    "crates/swss-common"
, "crates/swbus-edge", "crates/swbus-proto"]
exclude = []

[workspace.package]
version = "0.1.0"
authors = ["SONiC"]
license = "Apache-2.0"
repository = "https://github.com/sonic/sonic-dash-ha"
documentation = "https://github.com/sonic-net/SONiC/tree/master/doc/smart-switch/high-availability"
keywords = ["sonic", "dash"]
edition = "2021"

[workspace.lints.rust]
unused_extern_crates = 'warn'
trivial_numeric_casts = 'warn'
unstable_features = 'warn'
unused_import_braces = 'warn'

[workspace.lints.clippy]
all = 'allow'

[workspace.dependencies]
# Async framework
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"

# Log and error handling
tracing = { version = "0.1", features = ["log"] }
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "serde"] }
syslog-tracing = "0.3"
thiserror = "1"
anyhow = "1"
human-panic = "2"
better-panic = "0.3"
signal-hook = "0.3"

# Serializatoin
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"

# Command line utils
clap = { version = "4", features = ["derive", "cargo", "wrap_help", "unicode", "string", "unstable-styles"] }
color-eyre = "0.6"

# gRPC
prost = "0.13"
tonic = "0.12"

# Utility
contracts = "0.6"
derivative = "2"
derive_builder = "0.20"
getset = "0.1"
lazy_static = "1.4"
owning_ref = "0.4"
strum = { version = "0.26", features = ["derive"] }
regex = "1"
dashmap = "6"
itertools = "0.13"
atomic_enum = "0.3"

# Internal dependencies
sonic-common = { version = "0.1.0", path = "crates/sonic-common" }
swbus-proto = { version = "0.1.0", path = "crates/swbus-proto" }

# Dev dependencies
criterion = "0.5"
fakeit = "1.1"
pretty_assertions = "1"

# Build dependencies
tonic-build = "0.12"
vergen = { version = "8.2", features = [ "build", "git", "gitoxide", "cargo", "rustc", "si" ]}
