[package]
name = "container"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
edition.workspace = true

[dependencies]
bollard = { workspace = true }
chrono = { workspace = true }
enumset = { workspace = true }
futures-util = { workspace = true }
clap = { workspace = true }
swss-common.workspace = true
tokio = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
