[package]
name = "sonic-dash-api-proto"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
edition.workspace = true

[dependencies]
prost.workspace = true
serde.workspace = true
sonicdb-derive.workspace = true
swss-common = { git = "https://github.com/sonic-net/sonic-swss-common.git", branch = "master" }
sonic-common.workspace = true
hex = "0.4"
serde_json.workspace = true

[build-dependencies]
prost-build = "0.13"
