[package]
name = "swbus-actor"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
edition.workspace = true

[dependencies]
swbus-edge = { path = "../swbus-edge" }
swss-common = { git = "https://github.com/qiluo-msft/sonic-swss-common.git", branch = "qiluo/rustcrate" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
anyhow.workspace = true
tracing.workspace = true

[lints]
workspace = true

[dev-dependencies]
swss-common-testing = { git = "https://github.com/qiluo-msft/sonic-swss-common.git", branch = "qiluo/rustcrate" }
