[package]
name = "swbus-actor"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
edition.workspace = true

[dependencies]
swbus-edge.workspace = true
swss-common.workspace = true
sonicdb.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
anyhow.workspace = true
tracing.workspace = true
sonic-common.workspace = true

[lints]
workspace = true

[dev-dependencies]
swss-common-testing.workspace = true
