[package]
name = "swbus-cli"
description = "SONiC Switch Bus CLI"
categories = ["command-line-utilities", "network-programming"]
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
clap.workspace = true
serde_yaml.workspace = true
tabled.workspace = true

# Internal dependencies
swbus-edge.workspace = true
swbus-core.workspace = true
swbus-proto.workspace = true
[lints]
workspace = true
