[package]
name = "swbus-config"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
swss-serde.workspace = true
swss-common.workspace = true
swbus-proto.workspace = true

[dev-dependencies]
swss-common-testing.workspace = true
tempfile.workspace = true

[lints]
workspace = true
