[package]
name = "sonic-swbus-contract"
description = "SONiC Switch Bus Contract"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
prost = { workspace = true }
tonic = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }

[lints]
workspace = true
