[package]
name = "swbus-core"
description = "SONiC Switch Bus"
categories = ["network-programming"]
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
prost.workspace = true
dashmap.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true

[build-dependencies]
tonic-build.workspace = true

[lints]
workspace = true
