[package]
name = "swss-common-bridge"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
edition.workspace = true

[dependencies]
swss-common = { git = "https://github.com/qiluo-msft/sonic-swss-common.git", branch = "qiluo/rustcrate" }
swbus-edge = { path = "../swbus-edge" }
tokio.workspace = true
tokio-util.workspace = true
swbus-actor = { path = "../swbus-actor" }

[lints]
workspace = true

[dev-dependencies]
swss-common-testing = { git = "https://github.com/qiluo-msft/sonic-swss-common.git", branch = "qiluo/rustcrate" }
