[package]
name = "swss-common-bridge"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
edition.workspace = true

[dependencies]
swss-common = { workspace = true, features = ["async"] }
swbus-edge = { path = "../swbus-edge" }
tokio.workspace = true
tokio-util.workspace = true
swbus-actor = { path = "../swbus-actor" }
anyhow.workspace = true
sonic-dash-api-proto.workspace = true
prost.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
sonicdb-derive.workspace = true
sonic-common.workspace = true
tracing.workspace = true
[lints]
workspace = true

[dev-dependencies]
swss-common-testing.workspace = true
