[package]
name = "swss-common"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
libc = "0.2.158"

[build-dependencies]
bindgen = "0.70.1"
