[package]
name = "swss-common"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
edition.workspace = true

[lints]
workspace = true

[features]
async = ["dep:tokio"]

[dependencies]
libc = "0.2.158"
tokio = { version = "1", optional = true, features = ["net", "rt"] }

[build-dependencies]
bindgen = "0.70.1"

[dev-dependencies]
paste = "1.0.15"
rand = "0.8.5"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
