[package]
name = "swss-common"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
edition.workspace = true

[lints]
workspace = true

[features]
async = ["dep:tokio"]
serde = ["dep:serde"]

[dependencies]
libc = "0.2.158"
nix = { version = "0.29.0", features = ["poll"] }
tokio = { version = "1", optional = true, features = ["net", "rt"] }
serde = { version = "1", optional = true, features = ["derive"] }

[build-dependencies]
bindgen = "0.70.1"

[dev-dependencies]
swss-common-testing = { path = "../swss-common-testing" }
paste = "1.0.15"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
