[package]
name = "swss-serde"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
swss-common.workspace = true
serde_serializer_quick_unsupported = "0.1"

[lints]
workspace = true

[dev-dependencies]
swss-common-testing.workspace = true
